--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Favicon -->
     <link rel="icon" href="./assets/images/keiko-icon.ico" />
-    <title>Keiko Corp</title>
+    <title>Keiko Corp ltd</title>
     <!-- Open graph -->
     <meta
       property="og:image"
